<resources>
    <string name="app_name">wbyx</string>
    <string name="exit">退出</string>
    <string name="app_exit_tips">再按一次退出应用</string>
    <string name="login_register">登录注册</string>
    <string name="order_for_group">拼团订单</string>
    <string name="order_detail">订单详情</string>
    <string name="sales">销量</string>
    <string name="login_or_register">登录/注册</string>
    <string name="please_to_input_your_phone">请输入您的手机号</string>
    <string name="please_to_input_msg">填写短信验证码</string>
    <string name="get_message">获取验证码</string>
    <string name="get_message_again">重新获取</string>
    <string name="please_write_phone_right">请正确填写手机号</string>
    <string name="login_for_other_type">或从以下方式登录</string>
    <string name="tab_home">首页</string>
    <string name="tab_members">会员</string>
    <string name="tab_shop_car">购物车</string>
    <string name="tab_mine">我的</string>
    <string name="login_again">重新登录</string>
    <string name="click_again_exit_app">再按一次退出窝边优选</string>
    <string name="please_to_login_again">登录超时,请重新登录</string>
    <string name="invite_code">邀请码</string>
    <string name="registered_time">注册时间</string>
    <string name="due_to">到期</string>
    <string name="vip_can_economize">开通超级会员，预计每月可省¥</string>
    <string name="promptly_renewal">立即续费</string>
    <string name="immediately_opened">立即开通</string>
    <string name="at_month">/月</string>
    <string name="add_to_shopcar">加入购物车</string>
    <string name="buy_now">立即购买</string>
    <string name="vip_app">窝边会员</string>
    <string name="buy_vip">购买会员</string>
    <string name="buy_vip_to_reduce">购买会员卡，优惠买单</string>
    <string name="become_us_vip_can_more_low_price">成为窝边超级会员，享受超低会员价</string>
    <string name="also">还有</string>
    <string name="to_pay">去支付</string>
    <string name="subject_detail">专题详情</string>
    <string name="detail">详情</string>
    <string name="total">共</string>
    <string name="due_to_for_day">天到期</string>
    <string name="all_most_to_reduce">一共节约了¥</string>
    <string name="my_order">我的订单</string>
    <string name="check_all">查看全部</string>
    <string name="all_categories">全部分类</string>
    <string name="check_more">查看更多</string>
    <string name="payment">待付款</string>
    <string name="to_payment">付款</string>
    <string name="send_the_goods">待发货</string>
    <string name="wait_for_receiving">待收货</string>
    <string name="evaluate">待评价</string>
    <string name="to_evaluate">评价</string>
    <string name="after_sales">退款/售后</string>
    <string name="become_owner">成为店长</string>
    <string name="my_group">我的拼团</string>
    <string name="collect">收藏夹</string>
    <string name="good_collect">收藏</string>
    <string name="share">分享有礼</string>
    <string name="location">我的地址</string>
    <string name="setting">设置</string>
    <string name="feedback">问题反馈</string>
    <string name="common_service">常用服务</string>
    <string name="user_info">个人资料</string>
    <string name="click_to_change_avatar">点击修改头像</string>
    <string name="cancel">取消</string>
    <string name="camera">拍照</string>
    <string name="pick_for_album">从相册中选取</string>
    <string name="dont_allow_permissions">权限未被允许</string>
    <string name="sure">确定</string>
    <string name="allow">允许</string>
    <string name="become_owner_to_get">成为店长，赚零花钱吧！</string>
    <string name="apply_name">姓名 ：</string>
    <string name="apply_phone">联系方式 ：</string>
    <string name="dormitory_phone">联系方式</string>
    <string name="apply_choose">选择学校 ：</string>
    <string name="apply_address">宿舍楼址 ：</string>
    <string name="please_to_write_name">请填写真实姓名</string>
    <string name="please_to_write_phone">请填写联系方式</string>
    <string name="please_to_write_addr">请务必填写详细校内宿舍楼址</string>
    <string name="please_wait">请稍后...</string>
    <string name="nick_name">昵称</string>
    <string name="please_to_input_your_nick">请输入昵称</string>
    <string name="gender">性别</string>
    <string name="female">女</string>
    <string name="birthday">生日</string>
    <string name="save">保存</string>
    <string name="invite_man">邀请人</string>
    <string name="wechat_num">微信号</string>
    <string name="phone_num">手机号</string>
    <string name="complete">完成</string>
    <string name="male">男</string>
    <string name="unbind">未绑定</string>
    <string name="bind">已绑定</string>
    <string name="bind_inviter">绑定邀请人</string>
    <string name="please_input_invite_code">请输入邀请码</string>
    <string name="only_bind_one_dont_change">一个用户只能绑定一个邀请码，绑定后不能修改</string>
    <string name="please_to_confirm_invite_info">请确认邀请人信息</string>
    <string name="bind_success">绑定成功</string>
    <string name="apply_success_and_we_can_call_you">您的店长申请提交成功，通过审核后我们将联系您，请耐心等待～</string>
    <string name="apply_owner">申请楼长</string>
    <string name="apply_success">申请楼长提交成功</string>
    <string name="referees">推荐人 ：</string>
    <string name="confirm_the_goods">确认收货</string>
    <string name="choose_school">选择学校</string>
    <string name="cross_building_temporarily_do_not_support_delivery">“宿舍小店”跨楼栋暂不支持派送
        ，望理解！\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t</string>
    <string name="cross_building_temporarily_do_not_support_delivery_text">“宿舍小店”跨楼栋暂不支持派送，望理解！</string>
    <string name="please_input_school_name">请输入学校名称</string>
    <string name="please_input_your_name">请输入您的姓名</string>
    <string name="please_input_your_addr">请输入您的宿舍地址</string>
    <string name="please_to_select_addr">请选择地址</string>
    <string name="please_to_select_school">请选择学校</string>
    <string name="the_school_near">附近学校</string>
    <string name="choose_referees">选择推荐人</string>
    <string name="become_referees">成为推荐人</string>
    <string name="look_again">再看看</string>
    <string name="make_sure_selecte_that">确定选择该推荐人吗？</string>
    <string name="problem_feedback">问题反馈</string>
    <string name="the_terms_of_service">服务条款</string>
    <string name="clear_the_cache">清理缓存</string>
    <string name="news_setting">消息设置</string>
    <string name="check_version">版本更新</string>
    <string name="logout">退出登录</string>
    <string name="to_bind">绑定</string>
    <string name="clear_success">清理完成</string>
    <string name="to_update">新版本更新</string>
    <string name="is_last_version">已经是最新版本了</string>
    <string name="are_you_to_log_out">确定要取消登录吗</string>
    <string name="later_check">以后再说</string>
    <string name="permissions_not_to_down">检查到新版本，但您的权限被拒绝，无法使用存储空间，无法下载最新版本。</string>
    <string name="start_file_download_error">文件下载失败</string>
    <string name="local_news">本地消息</string>
    <string name="customer_service_message_notification">客服消息通知</string>
    <string name="customer">客服</string>
    <string name="the_service_agreement">服务协议</string>
    <string name="delete_all">清空</string>
    <string name="please_to_input_feedback">请输入反馈内容</string>
    <string name="select_picture">选择图片</string>
    <string name="upload_picture_at_once_lessthan_five">一次性最多可上传5张照片</string>
    <string name="submit">提交</string>
    <string name="reminder">催单</string>
    <string name="remind_the_delivery">提醒发货</string>
    <string name="customer_service_hotline">客服热线：</string>
    <string name="common_problems">常见问题</string>
    <string name="share_polite">分享有礼</string>
    <string name="share_commit">立即分享</string>
    <string name="my_address">我的地址</string>
    <string name="you_hava_not_to_add_address">您还没有收货地址哦~</string>
    <string name="add_not_dormitory">新增非宿舍地址</string>
    <string name="add_dormitory">新增宿舍地址</string>
    <string name="dormitory">宿舍地址</string>
    <string name="name">姓名</string>
    <string name="price">价格</string>
    <string name="phone_number">手机号码</string>
    <string name="please_input_china_name">请输入中文姓名</string>
    <string name="apply_become_build">申请成为楼长</string>
    <string name="if_not_has_your_build">若无你的楼栋即刻点击</string>
    <string name="please_select_your_build">请选择您的寝室楼 ：</string>
    <string name="build_mark">注：选择自己的寝室楼，我们将推荐楼长为您</string>
    <string name="build_remind">在启动APP时将优先定位至默认地址，避免下单\n时选择错误地址。</string>
    <string name="please_to_input_your_build_num">请输入你的楼栋号</string>
    <string name="please_to_input_your_room_num">请输入你的寝室号</string>
    <string name="set_default_addr">设为默认地址</string>
    <string name="please_input_your_build_name">请输入楼栋</string>
    <string name="recipient">收件人</string>
    <string name="where_the_technology">所在地区</string>
    <string name="please_to_input_addr_detail">请输入详细地址</string>
    <string name="addr_detail">详细地址</string>
    <string name="please_select_area_to_receive">请选择收货地区</string>
    <string name="not_dormitory">非宿舍地址</string>
    <string name="address_default">默认</string>
    <string name="address_write">编辑</string>
    <string name="address_delete">删除</string>
    <string name="other_address">其他地址</string>
    <string name="on_all">展开全部</string>
    <string name="pack_up">收起</string>
    <string name="address_default_dont_delete">默认地址不能删除</string>
    <string name="delete_the_address">确定要删除该地址吗？</string>
    <string name="the_retail_price">零售价 ：</string>
    <string name="the_vip_price">会员价 ：</string>
    <string name="share_friends">分享好友</string>
    <string name="group_num">人团</string>
    <string name="rmb">¥</string>
    <string name="has_choose">已选</string>
    <string name="to_save_user_info">是否保存当前修改</string>
    <string name="rmb_zero">¥ 0.00</string>
    <string name="goods_detail">商品详情</string>
    <string name="appraise_good">商品评价</string>
    <string name="group_fail_and_refund">拼团失败,已退款</string>
    <string name="group_success">拼团成功</string>
    <string name="time_remaining">剩余时间</string>
    <string name="time_remaining_for_pay">剩余支付时间 ：</string>
    <string name="complete_to_sure_the_order">确认收货剩余时间 ：</string>
    <string name="you_not_buy_anymore">您还没有订单哦～</string>
    <string name="to_go_shopping">去逛逛</string>
    <string name="add_up_to">合计：</string>
    <string name="order_info">订单信息</string>
    <string name="num_goods">件商品</string>
    <string name="categories_goods">商品分类</string>
    <string name="include_freight">含运费</string>
    <string name="freight">运费 : </string>
    <string name="total_price">总额 : </string>
    <string name="order_remark">备注 : </string>
    <string name="service_price_point">服务费 : </string>
    <string name="service_price">服务费</string>
    <string name="delete_order">删除订单</string>
    <string name="inventory">库存 ：</string>
    <string name="the_shop_car_is_so_empty">购物车空空如也～</string>
    <string name="notic_dorm">未满5元收取配送费1元</string>
    <string name="notice_city">未满20元收取配送费5元</string>
    <string name="beyond_the_distribution_scope">超过配送范围</string>
    <string name="select_all">全选</string>
    <string name="not_include_service">未含10%服务费</string>
    <string name="settlement">结算</string>
    <string name="go_settlement">去结算</string>
    <string name="delete_indalid">一键清空失效</string>
    <string name="the_failure_of_goods">失效商品</string>
    <string name="picked_up">抢光了</string>
    <string name="the_goods_have_been_sold_out">该商品已被抢光了</string>
    <string name="the_goods_have_been_taken_off_the_shelves">该商品已下架</string>
    <string name="fresh_fruit">美妆饮品</string>
    <string name="in_the_location">定位中...</string>
    <string name="the_order_owner">收货人 ：</string>
    <string name="dormitory_shop">宿舍小店</string>
    <string name="around_the_supermarket">窝边超市</string>
    <string name="nest_side_recommended">窝边推荐</string>
    <string name="select_new_products_and_wait_for_your_discovery">优选新品，等你发现</string>
    <string name="new_products">新品</string>
    <string name="new_releases">最新上架</string>
    <string name="sold_out">卖光了</string>
    <string name="now_not_has_dormitory_addr_and_to_build">暂无默认宿舍地址，赶紧去创建吧！</string>
    <string name="to_build">去创建</string>
    <string name="to_apply">去申请</string>
    <string name="now_not_has_dormitory_shop_and_to_build">该楼栋暂未开通，去申请成为店长吧！</string>
    <string name="please_select_shop">请选择店铺</string>
    <string name="not_show_name">匿名</string>
    <string name="submit_appraise">提交评价</string>
    <string name="your_appraise_will_be_unshow_your_name">你写的评价会以匿名形式展示</string>
</resources>