<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/member_common">

    <TextView
        android:id="@+id/tv_service"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/common_service"
        android:textSize="16sp"
        android:textColor="@color/c_333333"
        android:layout_marginLeft="@dimen/W28"
        android:layout_marginTop="@dimen/H24">
    </TextView>

    <TextView
        android:id="@+id/tv_line"
        android:layout_below="@id/tv_service"
        android:layout_marginTop="@dimen/H24"
        android:layout_width="match_parent"
        android:layout_height="@dimen/H3"
        android:background="@color/c_EBEBEB">
    </TextView>

    <LinearLayout
        android:id="@+id/lin_top"
        android:layout_below="@id/tv_line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_becomeOwner"
            android:layout_width="@dimen/W1"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/become_owner"
            android:drawablePadding="@dimen/H24"
            android:layout_marginTop="@dimen/H34"
            android:layout_marginBottom="@dimen/H30"
            android:gravity="center"
            android:drawableTop="@mipmap/become_owner"
            android:textColor="#727272"
            android:textSize="12sp"/>

        <TextView
            android:id="@+id/tv_myGroup"
            android:layout_width="@dimen/W1"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/my_group"
            android:drawablePadding="@dimen/H24"
            android:layout_marginTop="@dimen/H34"
            android:layout_marginBottom="@dimen/H30"
            android:gravity="center"
            android:drawableTop="@mipmap/icon_my_group"
            android:textColor="#727272"
            android:textSize="12sp"/>

        <TextView
            android:layout_width="@dimen/W1"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/collect"
            android:drawablePadding="@dimen/H24"
            android:layout_marginTop="@dimen/H34"
            android:layout_marginBottom="@dimen/H30"
            android:gravity="center"
            android:drawableTop="@mipmap/icon_collect"
            android:textColor="#727272"
            android:textSize="12sp"/>

        <TextView
            android:id="@+id/tv_share"
            android:layout_width="@dimen/W1"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/share"
            android:drawablePadding="@dimen/H24"
            android:layout_marginTop="@dimen/H34"
            android:layout_marginBottom="@dimen/H30"
            android:gravity="center"
            android:drawableTop="@mipmap/icon_share"
            android:textColor="#727272"
            android:textSize="12sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_below="@id/lin_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_location"
            android:layout_width="@dimen/W1"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/location"
            android:drawablePadding="@dimen/H24"
            android:layout_marginTop="@dimen/H6"
            android:layout_marginBottom="@dimen/H30"
            android:gravity="center"
            android:drawableTop="@mipmap/icon_location"
            android:textColor="#727272"
            android:textSize="12sp"/>

        <TextView
            android:id="@+id/tv_feedBack"
            android:layout_width="@dimen/W1"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/feedback"
            android:drawablePadding="@dimen/H24"
            android:layout_marginTop="@dimen/H6"
            android:layout_marginBottom="@dimen/H30"
            android:gravity="center"
            android:drawableTop="@mipmap/icon_feedback"
            android:textColor="#727272"
            android:textSize="12sp"/>

        <TextView
            android:id="@+id/tv_setting"
            android:layout_width="@dimen/W1"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/setting"
            android:drawablePadding="@dimen/H24"
            android:layout_marginTop="@dimen/H6"
            android:layout_marginBottom="@dimen/H30"
            android:gravity="center"
            android:drawableTop="@mipmap/icon_setting"
            android:textColor="#727272"
            android:textSize="12sp"/>


        <TextView
            android:layout_width="@dimen/W1"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawablePadding="@dimen/H24"
            android:layout_marginTop="@dimen/H6"
            android:layout_marginBottom="@dimen/H30"
            android:gravity="center"
            android:textColor="#727272"
            android:textSize="12sp"/>

    </LinearLayout>
</RelativeLayout>