<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/H100"
    android:background="@color/c_FFFFFF">

    <LinearLayout
        android:id="@+id/lin_tab"
        android:layout_width="@dimen/W340"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_toHome"
            android:layout_width="@dimen/W1"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginTop="@dimen/H8"
            android:layout_height="match_parent"
            android:text="@string/tab_home"
            android:drawableTop="@mipmap/good_to_home"
            android:layout_centerVertical="true">
        </TextView>

        <TextView
            android:id="@+id/tv_toShopCar"
            android:layout_width="@dimen/W1"
            android:layout_weight="1"
            android:layout_marginTop="@dimen/H8"
            android:layout_height="match_parent"
            android:text="@string/tab_shop_car"
            android:gravity="center"
            android:drawableTop="@mipmap/good_to_shopcar"
            android:layout_centerVertical="true">
        </TextView>

        <TextView
            android:id="@+id/tv_toConnect"
            android:layout_width="@dimen/W1"
            android:layout_weight="1"
            android:layout_marginTop="@dimen/H8"
            android:layout_height="match_parent"
            android:text="@string/good_collect"
            android:gravity="center"
            android:drawableTop="@drawable/selector_connect"
            android:layout_centerVertical="true">
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_toRightOf="@id/lin_tab"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_addToShopCar"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="@color/c_FFFFFF"
            android:background="@drawable/selector_add_shop"
            android:layout_marginTop="@dimen/H14"
            android:text="@string/add_to_shopcar"
            android:layout_marginBottom="@dimen/H14">
        </TextView>

        <TextView
            android:id="@+id/tv_buyNow"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/W8"
            android:layout_marginRight="@dimen/W16"
            android:text="@string/buy_now"
            android:textSize="16sp"
            android:textColor="@color/c_FFFFFF"
            android:gravity="center"
            android:layout_weight="1"
            android:background="@drawable/selector_buy"
            android:layout_marginTop="@dimen/H14"
            android:layout_marginBottom="@dimen/H14">
        </TextView>
    </LinearLayout>
</RelativeLayout>