<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/c_FFFFFF">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/H88"
        android:background="@color/c_F8F8F8">
        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="wrap_content"
            android:paddingLeft="@dimen/W48"
            android:paddingRight="@dimen/W48"
            android:layout_height="match_parent"
            android:background="@color/c_F8F8F8"
            android:text="@string/cancel"
            android:gravity="center_vertical">
        </TextView>
    </RelativeLayout>

    <com.zj.wz.wbyx.baseandroid.view.EditTextWithDel
        android:id="@+id/et_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/W24"
        android:layout_marginTop="@dimen/H200"
        android:layout_marginRight="@dimen/W52"
        android:background="@null"
        android:inputType="number"
        android:maxLength="13"
        android:textColorHint="@color/c_CCCCCC"
        android:textSize="12sp"
        android:hint="@string/please_to_input_your_phone"
        android:drawablePadding="@dimen/W24"
        android:padding="@dimen/W10"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/H2"
        android:background="@color/c_EEEEEE"
        android:layout_marginTop="@dimen/H30"
        android:layout_marginLeft="@dimen/W30"
        android:layout_marginRight="@dimen/W30">
    </TextView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/H28">
        <com.zj.wz.wbyx.baseandroid.view.EditTextWithDel
            android:id="@+id/et_msgCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/W24"
            android:layout_marginRight="@dimen/W52"
            android:background="@null"
            android:textColorHint="@color/c_CCCCCC"
            android:inputType="number"
            android:maxLength="4"
            android:textSize="12sp"
            android:hint="@string/please_to_input_msg"
            android:drawablePadding="@dimen/W24"
            android:padding="@dimen/W10"/>

        <TextView
            android:id="@+id/tv_sendMsg"
            android:layout_width="@dimen/W140"
            android:layout_height="@dimen/H56"
            android:text="@string/get_message"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/W52"
            android:enabled="false"
            android:background="@drawable/btn_selecter"
            android:textColor="@color/c_FFFFFF"
            android:gravity="center"
            android:textSize="12sp">
        </TextView>
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/H2"
        android:background="@color/c_EEEEEE"
        android:layout_marginTop="@dimen/H30"
        android:layout_marginLeft="@dimen/W30"
        android:layout_marginRight="@dimen/W30">
    </TextView>

    <Button
        android:id="@+id/btn_loginOrRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_selecter"
        android:text="@string/to_bind"
        android:textColor="@color/c_FFFFFF"
        android:textSize="14sp"
        android:gravity="center"
        android:enabled="false"
        android:layout_gravity="right"
        android:layout_marginLeft="@dimen/W56"
        android:layout_marginRight="@dimen/W56"
        android:layout_marginTop="@dimen/H60">
    </Button>
</LinearLayout>