<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/title"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycle_goods"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </android.support.v7.widget.RecyclerView>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/H90">

        <CheckBox
            android:id="@+id/checkbox_showName"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/W24"
            android:text="@string/not_show_name"
            android:textColor="@color/c_666666"
            android:textSize="12sp"
            android:paddingLeft="@dimen/W24"
            android:button="@drawable/selector_default_address">
        </CheckBox>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="10sp"
            android:text="@string/your_appraise_will_be_unshow_your_name"
            android:paddingRight="@dimen/W20"
            android:textColor="@color/c_999999"
            android:layout_alignParentRight="true"
            android:gravity="center">
        </TextView>
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/H2"
        android:background="@color/c_EEEEEE">
    </TextView>

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/H80"
        android:background="@drawable/enable_login"
        android:layout_marginLeft="@dimen/W56"
        android:textSize="16sp"
        android:gravity="center"
        android:textColor="@color/c_FFFFFF"
        android:layout_marginRight="@dimen/W56"
        android:text="@string/submit_appraise"
        android:layout_marginTop="@dimen/H100">
    </Button>
</LinearLayout>